--- a/main.css
+++ b/main.css
@@ -10,14 +10,9 @@ html{
   overflow: hidden;
 }
 .iniNav{
-  
-  margin: auto;
-  text-align: center;
-  background-color: grey;
   text-align: center;
   position: relative;
-  top: 385px;
-  width: 300px;
+  top: 250px;
 }
 ul {
  
@@ -36,11 +31,9 @@ ul {
 
 
 h1 {
-  background-color: grey;
   color: black;
     margin: auto;
     text-align: center;
-
 }
 li img{
   height: 40px;
@@ -51,25 +44,8 @@ li img{
   position: relative;
   top: 150px;
   text-align: center;
-  width: 300px;
-  height: 30px;
-}
-.aboutNav{
-margin-top: 80px;
-}
-.aboutMeNa{
-  position: relative;
-  top: 100px;
-  border-radius: 100%;
-  padding: 10px 0;
-  height: 35px;
-  width: 50px;
-  font-size: 10px;
-  
 }
 .bio{
-  background-color: rgb(105, 105, 105);
-  color: white;
   position: relative;
   top: 150px;
   margin: auto;
@@ -81,7 +57,7 @@ margin-top: 80px;
   
 }
 .bio p {
-  text-align-last: center;
+  text-align-last: left;
 }
 
 .projects {
@@ -91,28 +67,12 @@ margin-top: 10px;
 .projectsImg {
 
   height: 300px;
-  width: 360px;
+  width: 360px;;
 }
 .projectsNav{
-margin-top: 50px;
 text-align: center;
 }
-.projectEx{
-  background-color: rgb(88, 88, 88);
-  margin: auto;
-  text-align: center;
-  width: 340px;
-  height: 300px;
-}
 @media only screen and (min-width: 768px) {
-  .iniNav{
-    text-align: center;
-    position: relative;
-    top: 390px;
-  }
-  .aboutNav{
-    margin-top: 250px;
-    }
 .left {
   font-size: 60px;
 }
@@ -132,12 +92,6 @@ li a{
 h1 {
   font-size: 30px;
 }
-.about{
-  background-color: grey;
-  font-size: 40px;
-  width: 300px;
-  height: 50px;
-}
 .bio {
   font-size: 34px;
   width: 500px;
@@ -147,39 +101,17 @@ h1 {
   height: 500px;
   width: 700px;
 }
-.projectEx{
-  width: 700px;
-  height: 400px;
 }
-}
-/* ipad pro */
-@media only screen and (min-width: 900px){
-.projectEx{
-  width: 1000px;
-  height: 600pxd;
-}
-}
-@media only screen and (min-width: 1025px) {
+@media only screen and (min-width: 900px) {
 
   .bio {
-    width: 1500px;
-    height: 400px;
+    width: 900px;
   }
-  .aboutNav{
-    margin-top: 150px;
-    }
-    .aboutMeNa{
-      font-size: 30px;
-      padding: 10px 0;
-      height: 60px;
-      width: 60px;
-    }
+  .projectsNav{
+
+  }
   .projectsImg {
     height: 700px;
     width: 1200px;
-  }
-  .projectEx{
-    width: 1400px;
-    height: 600px;
   }
 }
