--- a/main.css
+++ b/main.css
@@ -9,10 +9,14 @@ html{
   height: 100%;
   overflow: hidden;
 }
-.iniNav{
+.nav{
   text-align: center;
   position: relative;
   top: 250px;
+}
+.topnav{
+  position: relative;
+  top: 10px;
 }
 ul {
  
