--- a/main.css
+++ b/main.css
@@ -18,6 +18,48 @@ html{
   left: 0;
   bottom: 0;
 }
+.dropbtn{
+text-align: center;
+}
+
+/* Dropdown button */
+.dropdown, .dropbtn {
+
+  font-size: 16px;
+  border: none;
+  outline: none;
+  color: black;
+
+  background-color: inherit;
+  font-family: inherit; /* Important for vertical align on mobile phones */
+  margin: auto; /* Important for vertical align on mobile phones */
+}
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 16px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: flex;
+  text-align: left;
+}
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: inline-block;
+}
 .anguiano{
   color black;
 }
@@ -29,9 +71,14 @@ html{
   text-decoration: none;
 }
 .nav{
+
   text-align: center;
   position: relative;
   top: 250px;
+}
+nav a{
+
+  text-align: center
 }
 .topnav{
   text-align: center;
@@ -46,7 +93,7 @@ ul {
     overflow: hidden;
   }
   li {
-    display: inline;
+    display: inline-block;
     color: white;
     padding: 6px 8px;
     text-decoration: none;
