--- a/main.css
+++ b/main.css
@@ -28,7 +28,7 @@ text-align: center;
   font-size: 16px;
   border: none;
   outline: none;
-  color: black;
+  color: #000000;
 
   background-color: inherit;
   font-family: inherit; /* Important for vertical align on mobile phones */
@@ -61,7 +61,7 @@ text-align: center;
   display: inline-block;
 }
 .anguiano{
-  color black;
+  color: black;
 }
 .anguiano:link{
   text-decoration: none;
