made changes from graders comments

--- a/main.css
+++ b/main.css
@@ -4,8 +4,8 @@
 }
 
 .bckground {
-  background-image: url("img/water.jpg");
-  background-size: 500px;
+  /* background-image: url("img/water.jpg");
+  background-size: 500px; */
   border-radius: 5px;
   
 }
