--- a/main.css
+++ b/main.css
@@ -1,4 +1,3 @@
-
 * {
   box-sizing: border-box;
 }
@@ -28,6 +27,49 @@ html{
 .project-title{
   padding-top: 20px;
 }
+.icon {
+  position: fixed;
+  cursor: pointer;
+  top: 5%;
+  right: 5%;
+  width: 40px;
+  height: 45px;
+  transform: translate(-50%, -50%);
+  display: block;
+  z-index: 1000;
+}
+.hamburger {
+  width: 40px;
+  height: 4px;
+  line-height: 70px;
+  background: #fff;
+  border-radius: 5px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  box-shadow: 0 2px 5px rgba(0,0,0,.2);
+  transition: .5s;
+}
+.hamburger:before,
+.hamburger:after {
+    content: '';
+    position: absolute;
+    width: 40px;
+    height: 4px;
+    background: #fff;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0,0,0,.2);
+    transition: .5s;
+}
+
+.hamburger:before {
+    top: -10px;
+}
+
+.hamburger:after {
+    top: 10px;
+}
 .dropbtn{
 text-align: center;
 }
@@ -45,31 +87,24 @@ text-align: center;
   display: none;
   /* box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); */
   z-index: 1;
-  position: fixed;
+  /* position: fixed; */
 }
 .dropdown-content2 a{
 display: inline-block;
 }
-.dropdown2:hover .dropdown-content2 {  
-  display: inline-block;
-}
+
 /* Dropdown button */
 .dropdown, .dropbtn {
   border: none;
   outline: none;
-  
-
   background-color: inherit;
   font-family: inherit; /* Important for vertical align on mobile phones */
   margin: auto; /* Important for vertical align on mobile phones */
 }
 .dropdown-content {
   display: none;
-  position: relative;
-  
-  min-width: 16px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
+
+
 }
 
 /* Links inside the dropdown */
@@ -78,21 +113,32 @@ display: inline-block;
   color: black;
   padding: 12px 16px;
   text-decoration: none;
-  display: flex;
+  
   text-align: left;
 }
 .dropdown-content a:hover {
   background-color: #ddd;
 }
 
-/* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {
-  display: inline-block;
-
+.icon.active .hamburger {
+  background: rgba(0,0,0,0);
+  box-shadow: 0 2px 5px rgba(0,0,0,0);
 }
+
+.icon.active .hamburger:before {
+  top: 0;
+  transform: rotate(45deg);
+}
+
+.icon.active .hamburger:after {
+  top: 0;
+  transform: rotate(135deg);
+}
+/* Show the dropdown menu on hover */
+
 .anguiano{
   color: black;
-  margin: 30px;
+  margin: 5px;
 }
 .anguiano:link{
   text-decoration: none;
@@ -101,12 +147,7 @@ display: inline-block;
 .anguiano:visited{
   text-decoration: none;
 }
-/* .nav{
 
-  text-align: center;
-  position: relative;
-  top: 150px;
-} */
 nav a{
 
   text-align: center
@@ -148,13 +189,10 @@ li img{
      width: 50%; 
     border-radius: 50px;
   }
-  /* .about-section{
-    padding-top: 25px;
-  } */
+
 .about {
   color: rgb(20, 94, 104);
-  /* position: relative;
-  top: 150px; */
+
   padding-top: 20px;
   text-align: center;
   font-size: 14px;
@@ -171,6 +209,10 @@ li img{
   color: rgb(50, 63, 80);
   
 }
+
+/* ******* */
+
+/* ******** */
 
 .projects {
 margin-top: 10px;
@@ -266,13 +308,41 @@ h1 {
   height: 400px;
   width: 50%;
 }
-.dropdown-content {
-position: absolute;
 
-}
 
 }
 @media only screen and (min-width: 900px) {
+
+  .anguiano{
+    margin-top: 20px;
+  }
+  .about-img{
+    margin-top: 20px;
+  }
+
+  .dropdown2:hover .dropdown-content2 {  
+    display: inline-block;
+    position: fixed;
+  }
+
+  .dropdown:hover .dropdown-content {
+    display: inline-block;
+  
+  }
+  .dropdown-content{
+    position: fixed;
+    top: 5%;
+    min-width: 16px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+
+  .dropdown-content a {
+    display: flex;
+  }
+  .icon{
+    display: none;
+  }
 
   li img{
     height: 50px;
